--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,97 @@
-.App {
-  text-align: center;
+.App{
+    padding-top: 20px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.app_inner {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.filtered {
+    width: 350px;
+    height: 90vh;
+    padding: 20px;
+    border-radius: 20px;
+    border: 2px solid rgb(105, 94, 94);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.user_table {
+    width: 900px;
 }
 
-.App-link {
-  color: #61dafb;
+.dateFilter_day {
+    display: block;
+    width: 150px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.input_box {
+    display: block;
+    /* width: 150px; */
+}
+
+.time1 {
+    display: block;
+    width: 130px;
+}
+
+.times_filter{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+
+.agressiyaModal_heading {
+    font-size: 24px;
+}
+
+label, p{
+    font-weight: bold;
+    font-size: 20px;
+}
+
+.input_box{
+    margin-bottom: 50px;
+}
+
+.user_table {
+    display: block;
+    overflow-y: scroll;
+    max-height: 95vh;
+}
+
+.save_button {
+    display: block;
+    margin: 20px auto 0 auto;
+    padding: 10px 20px;
+    width: 100%;
+    font-size: 18px;
+    border-radius: 20px;
+    border: none;
+    color: white;
+    background-color: rgb(105, 94, 94);
+}
+
+.save_button:hover {
+    background-color: rgba(105, 94, 94, 0.7);
+}
+
+.save_button:active {
+    background-color: rgba(105, 94, 94, 0.5);
+}
+
+.userImg{
+    border-radius: 50%;
+}
+
+.userTables p {
+    display: flex;
+    align-items: center;
+    margin: 0;
+    margin-top: 10px;
+}
+
+.save_button1{
+    margin-top: 230px;
 }
