--- a/src/Pages/ComeWork/comeWork.css
+++ b/src/Pages/ComeWork/comeWork.css
@@ -5,12 +5,12 @@
 .app_inner {
     display: flex;
     align-items: flex-start;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 .filtered {
     width: 350px;
-    height: 90vh;
+    height: 80vh;
     padding: 20px;
     border-radius: 20px;
     border: 2px solid rgb(105, 94, 94);
@@ -27,7 +27,6 @@
 
 .input_box {
     display: block;
-    /* width: 150px; */
 }
 
 .time1 {
@@ -52,13 +51,13 @@ label, p{
 }
 
 .input_box{
-    margin-bottom: 50px;
+    margin-bottom: 10px;
 }
 
 .user_table {
     display: block;
     overflow-y: scroll;
-    max-height: 95vh;
+    max-height: 80vh;
 }
 
 .save_button {
